Fixed: navbar z-index

--- a/client/app/components/stdDropdown/stdDropdown.scss
+++ b/client/app/components/stdDropdown/stdDropdown.scss
@@ -36,7 +36,7 @@ std-dropdown .form-dropdown i {
   pointer-events: none;
   margin-left: -35px;
   line-height: 41px;
-  position: fixed;
+  position: absolute;
 }
 
 std-dropdown .tooltip {
